--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="text-3xl md:text-5xl font-bold mb-2">Salatiel Nery</h1>
             <h2 class="text-xl md:text-2xl text-cyan-300 mb-4">Engenharia de Conteúdo e Roteiro de Retenção</h2>
             <p class="max-w-2xl mx-auto text-gray-300">
-                Produção de Conteúdo para Múltiplas Plataformas e Formatos: <span class="text-yellow-300">De Shorts a Vídeos Longos (8-30 min)</span>
+                Produção de Conteúdo para Múltiplas Plataformas e Formatos: <span class="text-yellow-300">De Shorts a Vídeos Longos </span>
             </p>
         </header>
 
@@ -139,4 +139,5 @@
     </script>
 <script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
+
 </html>
